--- a/terraform.tfvars.sample
+++ b/terraform.tfvars.sample
@@ -21,11 +21,19 @@ ec2_control_plane = {
   ami_owners                 = ["099720109477"]
   ami_name_values            = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
   instance_type              = "t3a.small"
-  instance_name              = "kubernetes_setup_control_plane"
+  instance_name              = "k8s_control_plane"
   private_ip                 = "10.0.0.4"
   # Specify a public key file to SSH to the EC2 instance
   ssh_pubkey                 = "./files/sshkey.pub"
   aws_key_pair_name          = "ssh_key_control_plane"
+  ebs_configs                = []
+  # ebs_configs              = [
+  #   {
+  #     size = "10"
+  #     type = "gp3"
+  #     tags = { Name = "control_plane_volume" }
+  #   }
+  # ]
   enable_access_to_apiserver = false
 }
 
@@ -34,21 +42,37 @@ ec2_workers = [
     ami_owners        = ["099720109477"]
     ami_name_values   = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
     instance_type     = "t3.micro"
-    instance_name     = "kubernetes_setup_worker1"
+    instance_name     = "k8s_worker1"
     private_ip        = "10.0.0.5"
     # Specify a public key file to SSH to the EC2 instance
     ssh_pubkey        = "./files/sshkey.pub"
     aws_key_pair_name = "ssh_key_worker1"
+    ebs_configs       = []
+    # ebs_configs       = [
+    #   {
+    #     size = "10"
+    #     type = "gp3"
+    #     tags = { Name = "worker1_volume" }
+    #   }
+    # ]
   },
   {
     ami_owners        = ["099720109477"]
     ami_name_values   = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
     instance_type     = "t3.micro"
-    instance_name     = "kubernetes_setup_worker2"
+    instance_name     = "k8s_worker2"
     private_ip        = "10.0.0.6"
     # Specify a public key file to SSH to the EC2 instance
     ssh_pubkey        = "./files/sshkey.pub"
     aws_key_pair_name = "ssh_key_worker2"
+    ebs_configs       = []
+    # ebs_configs       = [
+    #   {
+    #     size = "10"
+    #     type = "gp3"
+    #     tags = { Name = "worker2_volume" }
+    #   }
+    # ]
   }
 ]
 
