--- a/terraform.tfvars.sample
+++ b/terraform.tfvars.sample
@@ -39,6 +39,9 @@ ec2_control_plane = {
   #     tags = { Name = "control_plane_volume" }
   #   }
   # ]
+  # create_eip        = false
+  # eip_allocation_id = "eipalloc-xxxxxxxx"
+  # eip_tags          = { Name = "k8s-control-plane-eip" }
   enable_access_to_apiserver = false
 }
 
@@ -65,6 +68,9 @@ ec2_workers = [
     #     tags = { Name = "worker1_volume" }
     #   }
     # ]
+    # create_eip        = false
+    # eip_allocation_id = "eipalloc-xxxxxxxx"
+    # eip_tags          = { Name = "k8s-worker1-eip" }
   },
   {
     ami_owners      = ["099720109477"]
